--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
+@import url(http://fonts.googleapis.com/css?family=Dancing+Script:400,700);
 
 body {
   padding:50px;
@@ -21,7 +22,9 @@ h1, h2, h3 {
 }
 
 h1 {
+  font:"Dancing Script", Lato, sans-serif;
   font-size:28px;
+  font-weight:700;
 }
 
 h2 {
